<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/calculate_tip"
        android:enabled="false"
        app:layout_constraintBaseline_toBaselineOf="@id/check_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/check_amount" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/check_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/check_amount"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/number_of_people"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/num_people"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_amount" />

    <EditText
        android:id="@+id/custom_tip_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:hint="@string/edit_tip"
        android:inputType="number"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/number_of_people"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button" />

    <RadioGroup
        android:id="@+id/tip_group"
        android:layout_width="167dp"
        android:layout_height="198dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_of_people">

        <RadioButton
            android:id="@+id/fifteen_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:text="@string/fifteen_percent"
            tools:layout_conversion_absoluteHeight="52dp"
            tools:layout_conversion_absoluteWidth="1dp"
            tools:layout_editor_absoluteX="32dp"
            tools:layout_editor_absoluteY="171dp" />

        <RadioButton
            android:id="@+id/twenty_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:text="@string/twenty_percent"
            tools:layout_conversion_absoluteHeight="1dp"
            tools:layout_conversion_absoluteWidth="1dp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="1163dp" />

        <RadioButton
            android:id="@+id/twenty_five_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="5"
            android:text="@string/twenty_five_percent"
            tools:layout_conversion_absoluteHeight="1dp"
            tools:layout_conversion_absoluteWidth="1dp"
            tools:layout_editor_absoluteX="352dp"
            tools:layout_editor_absoluteY="1163dp" />

        <RadioButton
            android:id="@+id/custom_tip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/custom_tip"
            tools:layout_conversion_absoluteHeight="1dp"
            tools:layout_conversion_absoluteWidth="1dp"
            tools:layout_editor_absoluteX="288dp"
            tools:layout_editor_absoluteY="883dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="268dp"
        android:text="@string/resultTip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>